# ergot

./: .gitignore  Cargo.toml  README.md  checkall.sh  cleanall.sh  flake.nix  fmtall.sh
crates/cobs-acc/: Cargo.toml  LICENSE-MIT  README.md
crates/cobs-acc/src/: lib.rs
crates/ergot/: Cargo.toml  README.md  build.rs  miri.sh
crates/ergot-base/: Cargo.toml  README.md  miri.sh
crates/ergot-base/src/: address.rs  lib.rs  nash.rs  net_stack.rs  wire_frames.rs
crates/ergot-base/src/interface_manager/: cobs_stream.rs  eusb_0_4_client.rs  eusb_0_5_client.rs  framed_stream.rs  mod.rs  null.rs  nusb_0_1_router.rs  std_tcp_client.rs  std_tcp_router.rs  std_utils.rs
crates/ergot-base/src/interface_manager/impls/: eusb_0_4_client.rs  eusb_0_5_client.rs  mod.rs  null.rs  nusb_0_1_router.rs  std_tcp_client.rs  std_tcp_router.rs
crates/ergot-base/src/interface_manager/interface_impls/: embedded_io.rs  mod.rs  std_serial_cobs.rs  std_tcp.rs  tokio_tcp.rs
crates/ergot-base/src/interface_manager/profiles/: mod.rs
crates/ergot-base/src/interface_manager/utils/: cobs_stream.rs  edge.rs  framed_stream.rs  mod.rs  std.rs
crates/ergot-base/src/socket/: borrow.rs  mod.rs  owned.rs  raw.rs  raw_owned.rs  std_bounded.rs
crates/ergot-base/tests/: smoke.rs
crates/ergot/src/: address.rs  fmtlog.rs  lib.rs  nash.rs  net_stack.rs  prelude.rs  toolkits.rs  traits.rs  well_known.rs  wire_frames.rs
crates/ergot/src/book/: _01_what_can_you_do.rs  _02_major_concepts.rs  _03_feature_overview.rs  mod.rs
crates/ergot/src/conformance/: mod.rs  net_stack.rs
crates/ergot/src/interface_manager/: edge_port.rs  mod.rs  multi.rs  null.rs  std_tcp.rs  std_tcp_client.rs  std_tcp_router.rs  std_utils.rs
crates/ergot/src/interface_manager/interface_impls/: embassy_net_udp.rs  embassy_usb.rs  embedded_io.rs  mod.rs  nusb_bulk.rs  tokio_serial_cobs.rs  tokio_stream.rs  tokio_tcp.rs  tokio_udp.rs
crates/ergot/src/interface_manager/profiles/: direct_edge.rs  direct_router.rs  mod.rs  null.rs  (+2 more)
crates/ergot/src/logging/: defmt_sink.rs  defmtlog.rs  fmtlog.rs  log_v0_4.rs  mod.rs
crates/ergot/src/net_stack/: arc.rs  discovery.rs  endpoints.rs  inner.rs  mod.rs  services.rs  topics.rs
crates/ergot/src/socket/: borrow.rs  endpoint.rs  mod.rs  owned.rs  raw_owned.rs  std_bounded.rs  topic.rs
crates/ergot/src/toolkits/: mod.rs
crates/ergot/src/transport/: mod.rs  rtt.rs
crates/ergot/tests/: bridge_router.rs  direct_router.rs  discovery.rs  e2e_bridge.rs  e2e_bridge_seed.rs  e2e_link_local.rs  e2e_router.rs  e2e_stream.rs  frame_processor.rs  log_fmt.rs  mtu_discovery.rs  multi_interface.rs  no_std_router.rs  processor_stale_net_id.rs  smoke.rs  smoke2.rs  socket_ptr.rs
crates/ergot/tests/common/: mod.rs
demos/ergot-client/: Cargo.toml
demos/ergot-client/src/: main.rs
demos/ergot-nusb-router/: Cargo.toml
demos/ergot-nusb-router/src/: main.rs
demos/ergot-router/: Cargo.toml
demos/ergot-router/src/: main.rs
demos/esp32c6/: Cargo.toml
demos/esp32c6/esp32c6-serial/: Cargo.toml  README.md
demos/esp32c6/esp32c6-serial/src/: main.rs
demos/nrf52840/: Cargo.toml
demos/nrf52840-null/: Cargo.toml
demos/nrf52840-null/src/: main.rs
demos/nrf52840/.cargo/: config.toml
demos/nrf52840/nrf52840-eusb/: Cargo.toml
demos/nrf52840/nrf52840-eusb/src/: main.rs
demos/nrf52840/nrf52840-null/: Cargo.toml
demos/nrf52840/nrf52840-null/src/: main.rs
demos/rp2040/: Cargo.toml
demos/rp2040-null/: Cargo.toml
demos/rp2040/.cargo/: config.toml
demos/rp2040/rp2040-eusb/: Cargo.toml
demos/rp2040/rp2040-eusb/src/: main.rs
demos/rp2040/rp2040-null/: Cargo.toml
demos/rp2040/rp2040-null/src/: main.rs
demos/rp2040/rp2040-serial-pair/: Cargo.toml
demos/rp2040/rp2040-serial-pair/src/: lib.rs
demos/rp2350/rp2350-eusb/: Cargo.toml
demos/rp2350/rp2350-eusb/src/: main.rs
demos/rp2350/rp2350-null/: Cargo.toml  memory.x
demos/rp2350/rp2350-null/src/: main.rs
demos/std/: Cargo.toml
demos/std/defmt-serial-host/: Cargo.toml
demos/std/defmt-serial-host/src/: main.rs
demos/std/ergot-bridge-client/: Cargo.toml
demos/std/ergot-bridge-client-tcp/: Cargo.toml
demos/std/ergot-bridge-client-tcp/src/: main.rs
demos/std/ergot-bridge-client/src/: main.rs
demos/std/ergot-bridge-pair-udp/: Cargo.toml
demos/std/ergot-client/: Cargo.toml
demos/std/ergot-client-tcp/: Cargo.toml
demos/std/ergot-client-tcp/src/: main.rs
demos/std/ergot-client/src/: main.rs
demos/std/ergot-nusb-router/: Cargo.toml  README.md
demos/std/ergot-nusb-router/src/: main.rs
demos/std/ergot-router/: Cargo.toml
demos/std/ergot-router/src/: main.rs
demos/std/ergot-rtt-host/: Cargo.toml
demos/std/ergot-rtt-host/src/: main.rs
demos/std/ergot-seed-router/: Cargo.toml
demos/std/ergot-seed-router/src/: main.rs
demos/std/log-client/: Cargo.toml
demos/std/log-client-tcp/: Cargo.toml
demos/std/log-client/src/: main.rs
demos/std/log-router/: Cargo.toml
demos/std/log-router-serial/: Cargo.toml
demos/std/log-router-serial/src/: main.rs
demos/std/log-router-tcp/: Cargo.toml
demos/std/log-router-tcp/src/: main.rs
demos/std/log-router/src/: main.rs
demos/std/stream-plotting/: Cargo.toml  README.md
demos/std/stream-plotting/src/: app.rs  datastream.rs  lib.rs  main.rs
demos/std/tilt-app/: Cargo.toml  README.md
demos/std/tilt-app/src/: main.rs
demos/stm32f303vc/: Cargo.toml  README.md
demos/stm32f303vc/.cargo/: config.toml
demos/stm32f303vc/stm32f303vc-blinky/: Cargo.toml
demos/stm32f303vc/stm32f303vc-blinky/src/: main.rs
demos/stm32f303vc/stm32f303vc-button/: Cargo.toml
demos/stm32f303vc/stm32f303vc-button/src/: main.rs
demos/stm32g474/: Cargo.toml
demos/stm32g474/.cargo/: config.toml
demos/stm32g474/src/: lib.rs
demos/stm32h723zg/nucleoh723zg-blinky/: Cargo.toml  build.rs
demos/stm32h723zg/nucleoh723zg-net-udp-pair/: Cargo.toml
demos/stm32h743zi/: Cargo.toml
demos/stm32h743zi/.cargo/: config.toml
demos/stm32h743zi/nucleoh743zi-blinky/: Cargo.toml
demos/stm32h743zi/nucleoh743zi-blinky/src/: main.rs
demos/stm32h743zi/nucleoh743zi-net-udp-pair/: Cargo.toml
(+89 files in other folders)
