[package]
name = "ergot"
version = "0.1.0"
edition = "2024"

[dependencies]
const-fnv1a-hash = "1.1.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }

cordyceps = "0.3.3"
critical-section = { version = "1.2.0", features = ["std"] }
mutex = { version = "1.0.0", features = ["std", "impl-critical-section"] }
pin-project = "1.1.10"
maitake-sync = { version = "0.2.1", features = ["std"] }
postcard = "1.1.1"
bbq2 = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
postcard-rpc = "0.11.9"
postcard-schema = { version = "0.2.1", features = ["derive"] }

[patch.crates-io]
cordyceps = { git = "https://github.com/jamesmunns/mycelium", rev = "9c344032563c0b63a97f9aa16cf66aaef9eea6df" }
