[package]
name = "ergot-base"
version = "0.4.1"
authors = ["James Munns <james@onevariable.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/jamesmunns/ergot"
description = "The latest in unsafe network stacks"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = []
documentation = "https://docs.rs/ergot/"

[package.metadata.docs.rs]
rustdoc-args    = ["--cfg", "docsrs"]
features        = ["std"]

[features]
default = [
    "disable-cache-padding",
    # "nusb-v0_1",
]
disable-cache-padding = [
    "cordyceps/no-cache-pad",
    "maitake-sync/no-cache-pad",
]
std = [
    "bbq2/std",
    "cobs/std",
    "critical-section/std",
    "maitake-sync/std",
    "mutex/std",
    "postcard/use-std",
    "tokio",
]
embassy-usb-v0_4 = [
    "dep:defmt",
    "dep:embassy-usb",
    "dep:embassy-futures",
    "dep:embassy-time",
    "dep:static_cell",
]
nusb-v0_1 = [
    "std",
    "dep:nusb",
]

[dependencies]
critical-section    = "1.2.0"
heapless            = "0.8.0"
log                 = "0.4.27"
postcard            = "1.1.1"

bbq2            = { version = "0.2.0",  default-features = false, features = ["cas-atomics", "maitake-sync-0_2"] }
cobs            = { version = "0.3.0",  default-features = false }
cordyceps       = { version = "0.3.4",  default-features = false }
maitake-sync    = { version = "0.2.1",  default-features = false }
mutex           = { version = "1.0.0",  features = ["impl-critical-section"] }
serde           = { version = "1.0",    features = ["derive"], default-features = false }

# std
tokio           = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync"], optional = true }

# embassy-usb-v0_4
defmt           = { version = "1.0.0",  optional = true }
embassy-usb     = { version = "0.4",    optional = true }
embassy-futures = { version = "0.1.1",  optional = true }
embassy-time    = { version = "0.4.0",  optional = true }
static_cell     = { version = "2.1",    optional = true}

# nusb-v0_1
nusb    = { version = "0.1.14", optional = true }

[dev-dependencies]
tokio   = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync"] }
