[package]
name = "ergot-base"
version = "0.7.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/jamesmunns/ergot"
description = "Eloquence in messaging"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = []
documentation = "https://docs.rs/ergot/"

[package.metadata.docs.rs]
rustdoc-args    = ["--cfg", "docsrs"]
features        = ["std"]

[features]
default = [
    "disable-cache-padding",
]
disable-cache-padding = [
    "cordyceps/no-cache-pad",
    "maitake-sync/no-cache-pad",
]
std = [
    "bbq2/std",
    "cobs/std",
    "critical-section/std",
    "maitake-sync/std",
    "mutex/std",
    "postcard/use-std",
    "tokio",
]
embassy-usb-v0_4 = [
    "defmt-v1",
    "dep:embassy-usb-0_4",
    "dep:embassy-futures",
    "dep:embassy-time",
    "dep:static_cell",
]
embassy-usb-v0_5 = [
    "defmt-v1",
    "dep:embassy-usb-0_5",
    "dep:embassy-futures",
    "dep:embassy-time",
    "dep:static_cell",
]
nusb-v0_1 = [
    "std",
    "dep:nusb",
]
postcard-schema-v0_2 = [
    "dep:postcard-schema"
]
defmt-v1 = [
    "dep:defmt",
]

[dependencies]
const-fnv1a-hash    = "1.1.0"
critical-section    = "1.2.0"
heapless            = "0.8.0"
log                 = "0.4.27"
postcard            = "1.1.1"

bbq2            = { version = "0.4.1",  default-features = false,   features = ["maitake-sync-0_2"] }
cobs            = { version = "0.3.0",  default-features = false }
cordyceps       = { version = "0.3.4",  default-features = false }
maitake-sync    = { version = "0.2.1",  default-features = false }
mutex           = { version = "1.0.0",  features = ["impl-critical-section"] }
serde           = { version = "1.0",    default-features = false,   features = ["derive"] }

# postcard-schema-v0_2
postcard-schema = { version = "0.2", optional = true }

# std
tokio           = { version = "1.45.1", optional = true, features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync"] }

# embassy-usb-*
defmt           = { version = "1.0.0",  optional = true }
embassy-futures = { version = "0.1.1",  optional = true }
embassy-time    = { version = "0.4.0",  optional = true }
static_cell     = { version = "2.1",    optional = true }

# embassy-usb-v0_4
embassy-usb-0_4     = { version = "0.4", optional = true, package = "embassy-usb" }

# embassy-usb-v0_5
embassy-usb-0_5     = { version = "0.5", optional = true, package = "embassy-usb" }


# nusb-v0_1
nusb    = { version = "0.1.14", optional = true }

[dev-dependencies]
tokio   = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync"] }
