[package]
name = "ergot"
version = "0.11.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/jamesmunns/ergot"
description = "Eloquence in messaging"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = []
documentation = "https://docs.rs/ergot/"

[package.metadata.docs.rs]
rustdoc-args    = ["--cfg", "docsrs"]
features        = ["tokio-std"]

[features]
default = [
    "disable-cache-padding",
]
disable-cache-padding = [
    "cordyceps/no-cache-pad",
    "maitake-sync/no-cache-pad",
]
std = [
    "bbq2/std",
    "cobs-acc/std",
    "cobs/std",
    "critical-section/std",
    "embassy-time/std",
    "maitake-sync/std",
    "mutex/std",
    "postcard/use-std",
    "postcard-schema/use-std",
    "rand",
]
tokio-std = [
    "tokio",
    "std",
]
embassy-usb-v0_5 = [
    "defmt-v1",
    "dep:embassy-usb-0_5",
    "dep:static_cell",
    "dep:embassy-time"
]
embedded-io-async-v0_6 = [
    "defmt-v1",
    "dep:embedded-io-async-0_6",
]
nusb-v0_1 = [
    "tokio-std",
    "dep:nusb",
]
tokio-serial-v5 = [
    "tokio-std",
    "dep:tokio-serial-v5",
]
defmt-v1 = [
    "dep:defmt",
    "heapless/defmt",
]
# This is necessary because when embassy usb AND std is active, we need
# ssmarshal's std feature to be active to satisfy serde's trait bounds for
# Error/StdError
_all-features-hack = [
    "ssmarshal/std",
]

[dependencies]
const-fnv1a-hash    = "1.1.0"
critical-section    = "1.2.0"
embassy-futures     = "0.1.1"
heapless            = { version = "0.9.1", features = ["serde"] }
log                 = "0.4.27"
postcard            = "1.1.3"
pin-project         = "1.1.10"

bbq2            = { version = "0.4.2",  default-features = false,   features = ["maitake-sync-0_2"] }
cobs            = { version = "0.3.0",  default-features = false }
cordyceps       = { version = "0.3.4",  default-features = false }
embassy-time    = { version = "0.5.0", optional = true }
maitake-sync    = { version = "0.2.2",  default-features = false }
mutex           = { version = "1.0.0",  features = ["impl-critical-section"] }
serde           = { version = "1.0",    default-features = false,   features = ["derive"] }

cobs-acc        = { version = "0.1", path = "../cobs-acc" }

# postcard-schema-v0_2
postcard-schema = { version = "0.2.5", features = ["derive", "heapless-v0_9"] }

# std
tokio           = { version = "1.45.1", optional = true, features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync"] }
rand            = { version = "0.9.2", optional = true }

# embassy-usb-*
defmt           = { version = "1.0.0",  optional = true }
static_cell     = { version = "2.1",    optional = true }

# embassy-usb-v0_5
embassy-usb-0_5     = { version = "0.5", optional = true, package = "embassy-usb" }

# embedded-io-async
embedded-io-async-0_6 = { version = "0.6", optional = true, package = "embedded-io-async" }

# nusb-v0_1
nusb    = { version = "0.1.14", optional = true }

# tokio-serial-v5
tokio-serial-v5 = { version = "5.4.4", optional = true, package = "tokio-serial" }

# _all-features-hack
ssmarshal = { version = "1.0", optional = true }
portable-atomic = "1.11.1"

[dev-dependencies]
tokio   = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync"] }
env_logger = "0.11"
critical-section    = { version = "1.2.0", features = ["std"]}
