[package]
name = "ergot"
version = "0.12.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2024"
readme = "../../README.md"
repository = "https://github.com/jamesmunns/ergot"
description = "Eloquence in messaging"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = []
documentation = "https://docs.rs/ergot/"

[package.metadata.docs.rs]
rustdoc-args    = ["--cfg", "docsrs"]
features        = ["tokio-std"]

[features]
default = [
    "disable-cache-padding",
]
disable-cache-padding = [
    "cordyceps/no-cache-pad",
    "maitake-sync/no-cache-pad",
]
std = [
    "bbqueue/std",
    "cobs-acc/std",
    "cobs/std",
    "critical-section/std",
    "embassy-time?/std",
    "maitake-sync/std",
    "mutex/std",
    "postcard/use-std",
    "postcard-schema/use-std",
    "rand",
    "dep:rand_core",
]
tokio-std = [
    "tokio",
    "std",
]
embassy-usb-v0_5 = [
    "dep:embassy-usb-0_5",
    "dep:static_cell",
    "dep:embassy-time",
    "dep:embassy-sync",
]
embassy-usb-v0_6 = [
    "dep:embassy-usb-0_6",
    "dep:static_cell",
    "dep:embassy-time",
    "dep:embassy-sync",
]
embassy-net-v0_7 = [
    "dep:embassy-net-0_7",
    "dep:static_cell",
]
embedded-io-async-v0_6 = [
    "dep:embedded-io-async-0_6",
]
embedded-io-async-v0_7 = [
    "dep:embedded-io-async-0_7",
]
embassy-time = [
    "dep:embassy-time",
]
nusb-v0_1 = [
    "tokio-std",
    "dep:nusb",
]
tokio-serial-v5 = [
    "tokio-std",
    "dep:tokio-serial-v5",
]
# defmt support - enables Format derives on ergot types (no internal logging)
defmt-v1 = [
    "dep:defmt",
    "heapless/defmt",
    "embedded-io-async-0_6?/defmt-03",
    "embedded-io-async-0_7?/defmt",
    "embassy-net-0_7?/defmt",
    "embassy-usb-0_5?/defmt",
    "embassy-usb-0_6?/defmt",
    "embassy-time?/defmt",
]

# Ergot internal logging via defmt (INCOMPATIBLE with defmt-sink-network)
defmt-v1-internal = ["defmt-v1"]

# Ergot internal logging via log/geil() (safe with all sink features)
log-internal = []

# defmt message types and topics for network transport (no dependencies!)
# Use this on hosts/receivers that don't need the defmt compiler plugin
defmtlog = []

# defmt global logger with network output (bbqueue → ergot topics)
# Includes message types via defmtlog feature
defmt-sink-network = ["defmt-v1", "defmtlog"]

# defmt global logger with RTT output (direct to debug probe)
# For pure local debugging without network
defmt-sink-rtt = ["defmt-v1", "dep:rtt-target"]

# RTT transport - embedded-io-async wrappers for RTT channels
rtt = ["dep:rtt-target"]
# This is necessary because when embassy usb AND std is active, we need
# ssmarshal's std feature to be active to satisfy serde's trait bounds for
# Error/StdError
_all-features-hack = [
    "ssmarshal/std",
    "nostd-seed-router",
]
alloc = [
  "postcard-schema/alloc"
]
nostd-seed-router = [
    "dep:embassy-time",
    "dep:rand_core",
]
[dependencies]
const-fnv1a-hash    = "1.1.0"
critical-section    = "1.2.0"
embassy-futures     = "0.1.2"
heapless            = { version = "0.9.1", features = ["serde"] }
log                 = "0.4.27"
postcard            = "1.1.3"
pin-project         = "1.1.10"

bbqueue         = { version = "0.7.0",  default-features = false,   features = ["maitake-sync-0_3"] }
cobs            = { version = "0.3.0",  default-features = false }
cordyceps       = { version = "0.3.4",  default-features = false }
embassy-time    = { version = "0.5.1", optional = true }
maitake-sync    = { version = "0.3.0",  default-features = false }
mutex           = { version = "1.0.0",  features = ["impl-critical-section"] }
serde           = { version = "1.0",    default-features = false,   features = ["derive"] }

cobs-acc        = { version = "0.1", path = "../cobs-acc" }

# postcard-schema-v0_2
postcard-schema = { version = "0.2.5", features = ["derive", "heapless-v0_9"] }

# std
tokio           = { version = "1.45.1", optional = true, features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync"] }
rand            = { version = "0.9.2", optional = true }

# defmt / RTT
defmt           = { version = "1.0.0",  optional = true }
rtt-target      = { version = "0.6", optional = true }
static_cell     = { version = "2.1",    optional = true }

# embassy-usb-v0_5
embassy-usb-0_5     = { version = "0.5", optional = true, package = "embassy-usb" }
# embassy-usb-v0_6
embassy-usb-0_6     = { version = "0.6", optional = true, package = "embassy-usb" }

# embassy-usb-v0_7
embassy-net-0_7     = { version = "0.7", optional = true, package = "embassy-net", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6"] }

# embedded-io-async
embedded-io-async-0_6 = { version = "0.6", optional = true, package = "embedded-io-async" }
embedded-io-async-0_7 = { version = "0.7", optional = true, package = "embedded-io-async" }

# nusb-v0_1
nusb    = { version = "0.1.14", optional = true }

# tokio-serial-v5
tokio-serial-v5 = { version = "5.4.4", optional = true, package = "tokio-serial" }

# _all-features-hack
ssmarshal = { version = "1.0", optional = true }
portable-atomic = "1.11.1"
embassy-sync = { version = "0.8", default-features = false, optional = true }
rand_core = { version = "0.9", optional = true, default-features = false }

[dev-dependencies]
tokio   = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "io-util", "net", "sync"] }
env_logger = "0.11"
critical-section    = { version = "1.2.0", features = ["std"]}
rand_core = { version = "0.9" }

[[test]]
name = "no_std_router"
required-features = ["nostd-seed-router", "std"]
