[package]
name = "ergot-router"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "time", "io-util"] }

const-fnv1a-hash = "1.1.0"

cordyceps = "0.3.4"
critical-section = { version = "1.2.0", features = ["std"] }
mutex = { version = "1.0.0", features = ["std", "impl-critical-section"] }
pin-project = "1.1.10"
maitake-sync = { version = "0.2.1", features = ["std"] }
postcard = { version = "1.1.1", features = ["use-std"] }
bbq2 = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
postcard-rpc = "0.11.9"
postcard-schema = { version = "0.2.1", features = ["derive"] }
cobs = { version = "0.3.0", features = ["use_std"] }
log = "0.4.27"
env_logger = "0.11.8"


[dependencies.ergot]
path = "../../crates/ergot"
