[workspace]
members = [
    "nrf52840-eusb",
    "nrf52840-null",
]
resolver = "2"

[workspace.dependencies]
ergot   = { path = "../../crates/ergot", features = ["embassy-usb-v0_5"] }

bbq2                = { version = "0.4.1", default-features = false, features = ["critical-section", "maitake-sync-0_2"] }
cortex-m            = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
embassy-executor    = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf         = { version = "0.8.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-time        = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
mutex               = { version = "1.0.2", features = ["impl-unsafe-cortex-m-single-core"] }
panic-probe         = { version = "1.0.0", features = ["print-defmt"] }

cortex-m-rt     = "0.7.5"
defmt           = "1.0.1"
defmt-rtt       = "1.0.0"
static_cell     = "2.1.1"
embassy-usb     = "0.5.0"
embassy-sync    = "0.7.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false
