[package]
name = "rp2040-null"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m            = { version = "0.7.6", features = ["inline-asm"] }
embassy-executor    = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp          = { version = "0.6.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time        = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
ergot               = { path = "../../crates/ergot" }
maitake-sync        = { version = "0.2.1", default-features = false }
panic-probe         = { version = "0.3",   features = ["print-defmt"] }
portable-atomic     = { version = "1.6.0", features = ["critical-section"] }

cortex-m-rt         = "0.7.5"
defmt               = "1.0.1"
defmt-rtt           = "1.0.0"
mutex               = "1.0.2"

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false


[patch.crates-io]
# Waiting for next release
maitake-sync = { git = "https://github.com/jamesmunns/mycelium/", rev = "1642b5e06657eb34ff4d5c017c2a6f5fd1bd3470" }
