[workspace]
members = [
    "ergot-client",
    "ergot-nusb-router",
    "ergot-router",
]
resolver = "2"

[workspace.dependencies]
cordyceps       = "0.3.4"
env_logger      = "0.11.8"
log             = "0.4.27"

ergot   = { path = "../../crates/ergot", features = ["std", "nusb-v0_1"] }
mutex   = { version = "1.0.0",  features = ["std", "impl-critical-section"] }
tokio   = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "time", "io-util"] }
