[workspace]
members = [
    "ergot-client",
    "ergot-bridge-client",
    "ergot-nusb-router",
    "ergot-router",
    "ergot-seed-router",
    "log-client",
    "log-router",
    "log-router-serial",
    "stream-plotting",
    "tilt-app",
]
resolver = "2"

[workspace.dependencies]
cordyceps       = "0.3.4"
env_logger      = "0.11.8"
log             = "0.4.27"

ergot   = { path = "../../crates/ergot", features = ["tokio-std", "nusb-v0_1", "tokio-serial-v5"] }
mutex   = { version = "1.0.0",  features = ["std", "impl-critical-section"] }
tokio   = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "time", "io-util"] }
shared-icd = { path = "../shared-icd" }
