[workspace]
members = [
  "stm32f303vc-blinky",
  "stm32f303vc-button",
]
resolver = "2"

[workspace.dependencies]
ergot = { path = "../../crates/ergot", features = ["embassy-usb-v0_5"] }

cortex-m-rt   = "0.7.0"
defmt         = "1.0.1"
defmt-rtt     = "1.0.0"
embedded-hal  = "1.0.0"
mutex         = "1.0.2"

cortex-m          = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
embassy-executor  = { version = "0.9.1",  features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-stm32     = { version = "0.4.0",  features = [ "defmt", "stm32f303vc", "unstable-pac", "memory-x", "time-driver-tim2", "exti"]  }
embassy-time      = { version = "0.5.0",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
heapless          = { version = "0.9", default-features = false }
panic-probe       = { version = "1.0.0", features = ["print-defmt"] }
postcard-schema   = { version = "0.2.5", features = ["derive"] }
serde             = { version = "1.0.219", default-features = false, features = ["derive"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false
