[package]
name = "nrf52840-null"
version = "0.1.0"
edition = "2021"

[dependencies]
ergot               = { workspace = true }
cortex-m            = { workspace = true }
embassy-executor    = { workspace = true }
embassy-nrf         = { workspace = true }
embassy-time        = { workspace = true }
panic-probe         = { workspace = true }
cortex-m-rt         = { workspace = true }
defmt               = { workspace = true }
defmt-rtt           = { workspace = true }
mutex               = { workspace = true }
